# King-ai-v2

./: .dockerignore  .env.backup  .env.example  .gitignore  .snyk  .vanta.yml  =3.9.0  =5.0.0  ANTI_HALLUCINATION_GUIDE.md  AUDIT_REMEDIATION_REPORT.md  AWS_DEPLOYMENT_CHECKLIST.md  CHANGELOG.md  CODEBASE_ANALYSIS_AND_REMEDIATION.md  CODEBASE_REMEDIATION_REPORT.md  COMPREHENSIVE_GAP_ANALYSIS_AND_IMPLEMENTATION_PLAN.md  CONTEXT_FIXES.md  DEPLOYMENT_OPTIMIZATIONS.md  DEPLOYMENT_README.md  DEPLOYMENT_STATUS.md  DEVELOPER_DOCS.md  DEVELOPMENT_DIARY.md  Dockerfile  HALLUCINATION_QUICK_REF.md  HIGH_ROI_IMPROVEMENTS.md  IMPLEMENTATION_PART16_COMPLETE.md  IMPLEMENTATION_PART19_SUMMARY.md  IMPLEMENTATION_PART1_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN2.md  IMPLEMENTATION_PLAN_GAPS.md  IMPLEMENTATION_PLAN_PART1.md  IMPLEMENTATION_PLAN_PART10.md  IMPLEMENTATION_PLAN_PART11.md  IMPLEMENTATION_PLAN_PART12.md  IMPLEMENTATION_PLAN_PART13.md  IMPLEMENTATION_PLAN_PART14.md  IMPLEMENTATION_PLAN_PART15.md  IMPLEMENTATION_PLAN_PART16.md  IMPLEMENTATION_PLAN_PART17.md  IMPLEMENTATION_PLAN_PART18.md  (+138 more)
config/: risk_profiles.yaml  settings.py
control-panel/: Dockerfile  main.py  requirements.txt
dashboard/: Dockerfile  package-lock.json  package.json  vite.config.js
docs/: APPROVAL_SYSTEM.md
infrastructure/: README.md
king-ai-studio_me/: king-ai-studio_me.crt  king-ai-studio_me.p7b
king-ai-v3/: test_v3_components.py
references/: Semantic Kernel_ Multi-agent Orchestration _ Semantic Kernel.html
scripts/: control.py  control_config.json  demo_approvals.py  deploy.ps1  deploy_aws.sh  migrate_v1_data.py  seed_data.py  seed_users.py  setup-orchestrator.sh  verify_system.py
src/: __init__.py
tests/: conftest.py  reproduce_llm_leak.py  test_agents.py  test_analytics.py  test_approvals.py  test_ast_parser.py  test_banking.py  test_business.py  test_code_generator.py  test_code_patcher.py  test_commerce.py  test_content.py  test_context_memory.py  test_dropshipping_e2e.py  test_evolution.py  test_execution_engine.py  test_finance.py  test_git_manager.py  test_infrastructure.py  test_legal.py  test_lifecycle_api.py  test_master_ai.py  (+12 more)
(+805 files in other folders)
